# home-assistant-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/: mcp.json
scripts/: install_cursor_mcp.ps1  run_cursor_mcp.ps1
src/home_assistant_agent/: __init__.py  automations.py  cli.py  config.py  diagnostics.py  discovery.py  ha_client.py  mcp_server.py  models.py  policies.py  storage.py  tools.py
tests/: conftest.py  test_blueprints.py  test_diagnostics.py  test_ha_client.py  test_policies.py  test_tools.py
